# QRCode_Opencv3

./: CMakeLists.txt  makefile  qr.cpp
